<resources>

    <!-- general strings -->
    <string name="app_name">Tower\nlands</string>

    <!-- Strings related to home page -->
    <string name="welcome_msg_home">Welcome to TowerLands</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>


    <!-- Strings related to login page -->
    <string name="disclaimer_about_signing_up">Remember, you must sign up before you are able to login</string>
    <string name="Log_in">Login</string>

    <!-- Strings related to signup page -->
    <string name="Sign_up">sign up</string>
    <string name="prompt_name">name</string>



    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Logo">Image</string>
    <string name="Email">email</string>
    <string name="Forgot_password">forgot password?</string>
    <string name="Password">password</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>






    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="tutorial_basics">The game is based around designing a base that can withstand the waves of enemies which attack you</string>
    <string name="tutorial_base_building_text">Welcome to the Base Building Tutorial! In this guide, you will learn the fundamental steps to construct and manage your base efficiently.
        In order to start the game you need to press the button at the top left corner of the screen, and then click on the fourth icon.</string>
    <string name="tutorial_base_building_text2">
    after clicking, you will be greeted by an alert
        dialog which will ask you what is the difficulty level you want to play at. </string>
    <string name="tutorial_base_building_text3">
    after selecting a difficulty level, you will be redirected to the game screen. In the game screen you will have to choose which buildings to build
        (either the high durability but with no attacking power obelisk or the low durability but with high attacking power lightning tower)
    </string>
    <string name="tutorial_base_building_text4">
        after selecting a building you need to choose where to put it on the board.
        If you want to return to the building selection you need to press the button at the bottom right corner of the screen.
        If you want to actually start the game, you need to press the button at top right of the screen, and then the timer will commence.

    </string>

    <string name="tutorial_base_building_text6">
        after that you will have the option of skipping to the next round.
        at any time if you want to pause the game you can press the button at the left top corner of the screen
    </string>

    <string name="tutorial_base_building_text7">
        here you can change the sound settings
    </string>

    <string name="tutorial_base_building_text8">
        when the timer hits zero, the monsters appear. If the base you built can\'t withstand the monsters, you lose.
    </string>

    <string name="tutorial_base_building_text9">
        The number of points you get is the number of round you survived. eventually, there is a stopping point, but its very hard to get there.
    </string>



    <string name="tutorial_placing_buildings">In order to place a building, You need to press the button at the right bottom corner of the screen</string>
    <string name="tutorial_start_playing_text">Now all we ned to do is press the button at the right top corner of the screen and start playing the game </string>
    <string name="tutorial_skip_text">You can also press the button at the right top corner of the screen to skip to the next round</string>
    <string name ="tutorial_pause_button">Additionally, You can also press the button at the left top corner of the screen to pause the game</string>"
    <string name="tutorial_combat_text">
        Remember, you want to defeat the enemies every round so you have to place your buildings correctly
    </string>
    <string name="tutorial_building_types">You have two type of buildings: obelisk and a lightning tower.</string>
    <string name="tutorial_obelisk_text">The obelisk is used to distract monsters because is has a lot of Hp and cannot harm the monsters</string>
    <string name="tutorial_lightning_tower_text">The Lightning tower is used to damage enemies with lightning bolts from all four sides</string>



    <string name="disclaimer_about_signingup">Remember, you must sign up before you are able to login</string>
    <string name="tutorial_tips_text">tips place holder</string>

    <string name="developer">Developed by Tomer Spivak</string>
    <string name="default_web_client_id">1234567890-abcde12345.apps.googleusercontent.com</string>
</resources>