<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="50dp"
    android:background="@drawable/gradient_rules_background">

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Header -->
        <TextView
            style="@style/TitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="How to Play TowerLands"/>

        <!-- Basics -->
        <TextView
            style="@style/SectionHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="The Basics of TowerLands"/>

        <TextView
            style="@style/BodyText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tutorial_basics"/>

        <!-- Base Building -->
        <TextView
            style="@style/SectionHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Building Your Base"/>

        <TextView
            style="@style/BodyText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tutorial_base_building_text"/>

        <TextView
            style="@style/BodyText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tutorial_placing_buildings"/>

        <TextView
            style="@style/BodyText"
            android:text="@string/tutorial_start_playing_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            style="@style/BodyText"
            android:text="@string/tutorial_skip_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            style="@style/BodyText"
            android:text="@string/tutorial_pause_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- Combat Section -->
        <TextView
            style="@style/SectionHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Combat System"/>

        <TextView
            style="@style/BodyText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tutorial_combat_text"/>

    </LinearLayout>
</ScrollView>
